change line height on small screens and fix misdirected link

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2507,6 +2507,10 @@
 				/*margin: 2rem 0;*/
 			}
 
+			blockquote {
+				line-height: 2.5rem;
+			}
+
 		}
 
 	a.image {
